--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <base href="/">
     <meta charset="utf-8">
     <title></title>
     <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
