--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="node_modules/angular2/bundles/angular2-polyfills.js"></script>
     <script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
 
